Fix app switcher header alignment
Fix app switcher header alignment on mobile by adding margin-top and
margin-bottom of 0.

--- a/src/sass/06_components/_app-switcher-menu.scss
+++ b/src/sass/06_components/_app-switcher-menu.scss
@@ -37,6 +37,8 @@
             color: $pwdub-white;
             font-size: 18px;
             font-weight: bold;
+            margin-top: 0;
+            margin-bottom: 0;
 
             @include responsive(800px) {
                 font-size: 16px;
